# register-allocation

./: CMakeLists.txt  README.md  webpost.md
grammar/: simpleLexer.g4  simpleParser.g4
src/: ExceptionErrorListener.h  ast.cpp  ast.h  cfg.cpp  cfg.h  graph_coloring.cpp  graph_coloring.h  linear_scan.cpp  linear_scan.h  liveout.cpp  liveout.h  main.cpp
tests/: 0.simp  0.simp_ast.mmd  0.simp_cfg.mmd  0.simp_ir.txt  1.simp  1.simp_ir.txt
